--- a/statistics.qmd
+++ b/statistics.qmd
@@ -3,11 +3,11 @@ title: "Statistics"
 listing:
   contents: statistics
   sort: "date desc"
-  type: default
+  type: grid
   categories: true
-  sort-ui: false
-  filter-ui: false
-  image-height: 10em
+  sort-ui: true
+  filter-ui: true
+  image-height: auto
 page-layout: full
 title-block-banner: true
 ---
