--- a/statistics/bias-variance/index.qmd
+++ b/statistics/bias-variance/index.qmd
@@ -102,7 +102,7 @@ E(y_0) - \hat f(x_0))^2 \\
 = E(a^2) + E(b^2) + E(c^2) + 2E(ab) + 2E(bc) + 2E(ac)
 $$ Let's walk through the last three terms first.
 
-It's not hard to see $E(ab) = 0$, $E(bc)=0$, and $E(ac)=0$ as highlighed
+It's not hard to see $E(ab) = 0$, $E(bc)=0$, and $E(ac)=0$ as highlighted
 below.
 
 $$
@@ -153,7 +153,8 @@ E(c^2) &= E(E\hat f(x_0) - \hat f(x_0))^2 \\
 \end{aligned}
 $$ Taken together, it becomes clear that the expected prediction error
 can be decomposed into three parts. The first term $var(\epsilon)$ is
-the irreducible error and the others constitute the reducible error that we try to minimize.
+the irreducible error and the others constitute the reducible error that
+we try to minimize.
 
 $$
 E(y_0) - \hat f(x_0))^2 = \color{red}{var(\epsilon)} +  \color{blue}{\text{Bias}^2(\hat f(x_0)) + var(\hat f(x_0))}
